use graph-scroll for scrolling triggers

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "d3": "^5.9.2",
+    "graph-scroll": "^1.0.2",
     "mapbox-gl": "^0.53.1",
     "prettier": "^1.16.4",
-    "scrollmagic": "^2.0.6",
     "vue": "^2.6.6"
   },
   "devDependencies": {
