--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^2.6.5",
     "d3": "^5.9.2",
     "graph-scroll": "^1.0.2",
+    "mapbox-choropleth": "^0.7.4",
     "mapbox-gl": "^0.53.1",
     "prettier": "^1.16.4",
     "vue": "^2.6.6"
