--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mapbox-gl": "^0.53.1",
     "prettier": "^1.16.4",
     "vue": "^2.6.6",
-    "vue-slider-component": "^3.0.30"
+    "vue-slider-component": "^3.0.30",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
