--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "core-js": "^2.6.5",
     "d3": "^5.9.2",
     "graph-scroll": "^1.0.2",
+    "gsap": "^2.1.2",
     "mapbox-choropleth": "^0.7.4",
     "mapbox-gl": "^0.53.1",
+    "paper": "^0.12.0",
     "prettier": "^1.16.4",
     "vue": "^2.6.6",
     "vue-slider-component": "^3.0.30",
@@ -37,7 +39,8 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console": 0
+      "no-console": 0,
+      "no-unused-vars": 1
     },
     "parserOptions": {
       "parser": "babel-eslint"
